2009-01-29  Jürg Billeter  <j@bitron.ch>

	* vala/valapropertyaccessor.vala:

	Honor lower_case_cprefix attribute for property accessors,
	fixes bug 569646

2009-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/posix.vapi:

	Add bindings for open and associated functions and constants,
	patch by Michael Lauer

2009-01-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:
	* vala/valamethod.vala:

	Add overriding members to .vapi files, fixes bug 569219

2009-01-27  Jürg Billeter  <j@bitron.ch>

	* vala/valamemberaccess.vala:

	Skip overriding methods and properties in member access,
	fixes default arguments when calling virtual methods

2009-01-27  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gdk-pixbuf-2.0/gdk-pixbuf-2.0.metadata:

	Fix binding for gdk_pixbuf_scale_simple

	* vapi/gdk-pixbuf-2.0.vapi: regenerated

2009-01-26  Jürg Billeter  <j@bitron.ch>

	* vapi/posix.vapi:

	Add bindings for ioctl and associated constants

2009-01-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Revert incorrect code generation change for constants, will need to
	use `extern' to properly export constants

2009-01-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Support signals in static D-Bus client

2009-01-24  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:

	Fix type of implicit `this' parameter when using generics

2009-01-23  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodefunction.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagobjectmodule.vala:

	Refactor method parameter and result code generation

2009-01-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodedelegatemodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Add virtual generate_parameter method. Move array and delegate type